parsing/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statement
Rule 2     statements -> statements statement
Rule 3     statement -> assignment
Rule 4     statement -> print_statement
Rule 5     statement -> if_statement
Rule 6     statement -> while_statement
Rule 7     statement -> for_statement
Rule 8     statement -> NEWLINE
Rule 9     while_statement -> WHILE expression COLON statements
Rule 10    for_statement -> FOR VARIABLE IN expression COLON statements
Rule 11    print_statement -> PRINT LEFT_PAREN expression RIGHT_PAREN
Rule 12    assignment -> VARIABLE EQUAL expression
Rule 13    assignment -> VARIABLE EQUAL STRING
Rule 14    assignment -> VARIABLE EQUAL NUMBER
Rule 15    assignment -> VARIABLE EQUAL VARIABLE
Rule 16    expression -> term
Rule 17    expression -> expression PLUS term
Rule 18    expression -> expression MINUS term
Rule 19    expression -> expression STAR term
Rule 20    expression -> expression SLASH term
Rule 21    expression -> expression GREATER term
Rule 22    expression -> expression LESS term
Rule 23    expression -> expression EQUAL_EQUAL term
Rule 24    expression -> expression NOT_EQUAL term
Rule 25    expression -> expression GREATER_EQUAL term
Rule 26    expression -> expression LESS_EQUAL term
Rule 27    term -> NUMBER
Rule 28    term -> STRING
Rule 29    term -> VARIABLE
Rule 30    term -> FLOAT
Rule 31    term -> list
Rule 32    list -> LEFT_BRACKET elements RIGHT_BRACKET
Rule 33    elements -> expression
Rule 34    elements -> elements COMMA expression
Rule 35    if_statement -> IF expression COLON statements else_statement
Rule 36    else_statement -> <empty>
Rule 37    else_statement -> ELSE COLON statements
Rule 38    variable_assignment -> VARIABLE EQUAL expression

Terminals, with rules where they appear

COLON                : 9 10 35 37
COMMA                : 34
COMMENT              : 
ELSE                 : 37
EQUAL                : 12 13 14 15 38
EQUAL_EQUAL          : 23
FLOAT                : 30
FOR                  : 10
GREATER              : 21
GREATER_EQUAL        : 25
IF                   : 35
IN                   : 10
LEFT_BRACKET         : 32
LEFT_PAREN           : 11
LESS                 : 22
LESS_EQUAL           : 26
MINUS                : 18
NEWLINE              : 8
NOT_EQUAL            : 24
NUMBER               : 14 27
PLUS                 : 17
PRINT                : 11
RIGHT_BRACKET        : 32
RIGHT_PAREN          : 11
SLASH                : 20
STAR                 : 19
STRING               : 13 28
VARIABLE             : 10 12 13 14 15 15 29 38
WHILE                : 9
error                : 

Nonterminals, with rules where they appear

assignment           : 3
elements             : 32 34
else_statement       : 35
expression           : 9 10 11 12 17 18 19 20 21 22 23 24 25 26 33 34 35 38
for_statement        : 7
if_statement         : 5
list                 : 31
print_statement      : 4
statement            : 1 2
statements           : 2 9 10 35 37 0
term                 : 16 17 18 19 20 21 22 23 24 25 26
variable_assignment  : 
while_statement      : 6

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statement
    (2) statements -> . statements statement
    (3) statement -> . assignment
    (4) statement -> . print_statement
    (5) statement -> . if_statement
    (6) statement -> . while_statement
    (7) statement -> . for_statement
    (8) statement -> . NEWLINE
    (12) assignment -> . VARIABLE EQUAL expression
    (13) assignment -> . VARIABLE EQUAL STRING
    (14) assignment -> . VARIABLE EQUAL NUMBER
    (15) assignment -> . VARIABLE EQUAL VARIABLE
    (11) print_statement -> . PRINT LEFT_PAREN expression RIGHT_PAREN
    (35) if_statement -> . IF expression COLON statements else_statement
    (9) while_statement -> . WHILE expression COLON statements
    (10) for_statement -> . FOR VARIABLE IN expression COLON statements

    NEWLINE         shift and go to state 8
    VARIABLE        shift and go to state 9
    PRINT           shift and go to state 10
    IF              shift and go to state 11
    WHILE           shift and go to state 12
    FOR             shift and go to state 13

    statements                     shift and go to state 1
    statement                      shift and go to state 2
    assignment                     shift and go to state 3
    print_statement                shift and go to state 4
    if_statement                   shift and go to state 5
    while_statement                shift and go to state 6
    for_statement                  shift and go to state 7

state 1

    (0) S' -> statements .
    (2) statements -> statements . statement
    (3) statement -> . assignment
    (4) statement -> . print_statement
    (5) statement -> . if_statement
    (6) statement -> . while_statement
    (7) statement -> . for_statement
    (8) statement -> . NEWLINE
    (12) assignment -> . VARIABLE EQUAL expression
    (13) assignment -> . VARIABLE EQUAL STRING
    (14) assignment -> . VARIABLE EQUAL NUMBER
    (15) assignment -> . VARIABLE EQUAL VARIABLE
    (11) print_statement -> . PRINT LEFT_PAREN expression RIGHT_PAREN
    (35) if_statement -> . IF expression COLON statements else_statement
    (9) while_statement -> . WHILE expression COLON statements
    (10) for_statement -> . FOR VARIABLE IN expression COLON statements

    NEWLINE         shift and go to state 8
    VARIABLE        shift and go to state 9
    PRINT           shift and go to state 10
    IF              shift and go to state 11
    WHILE           shift and go to state 12
    FOR             shift and go to state 13

    statement                      shift and go to state 14
    assignment                     shift and go to state 3
    print_statement                shift and go to state 4
    if_statement                   shift and go to state 5
    while_statement                shift and go to state 6
    for_statement                  shift and go to state 7

state 2

    (1) statements -> statement .

    NEWLINE         reduce using rule 1 (statements -> statement .)
    VARIABLE        reduce using rule 1 (statements -> statement .)
    PRINT           reduce using rule 1 (statements -> statement .)
    IF              reduce using rule 1 (statements -> statement .)
    WHILE           reduce using rule 1 (statements -> statement .)
    FOR             reduce using rule 1 (statements -> statement .)
    $end            reduce using rule 1 (statements -> statement .)
    ELSE            reduce using rule 1 (statements -> statement .)


state 3

    (3) statement -> assignment .

    NEWLINE         reduce using rule 3 (statement -> assignment .)
    VARIABLE        reduce using rule 3 (statement -> assignment .)
    PRINT           reduce using rule 3 (statement -> assignment .)
    IF              reduce using rule 3 (statement -> assignment .)
    WHILE           reduce using rule 3 (statement -> assignment .)
    FOR             reduce using rule 3 (statement -> assignment .)
    $end            reduce using rule 3 (statement -> assignment .)
    ELSE            reduce using rule 3 (statement -> assignment .)


state 4

    (4) statement -> print_statement .

    NEWLINE         reduce using rule 4 (statement -> print_statement .)
    VARIABLE        reduce using rule 4 (statement -> print_statement .)
    PRINT           reduce using rule 4 (statement -> print_statement .)
    IF              reduce using rule 4 (statement -> print_statement .)
    WHILE           reduce using rule 4 (statement -> print_statement .)
    FOR             reduce using rule 4 (statement -> print_statement .)
    $end            reduce using rule 4 (statement -> print_statement .)
    ELSE            reduce using rule 4 (statement -> print_statement .)


state 5

    (5) statement -> if_statement .

    NEWLINE         reduce using rule 5 (statement -> if_statement .)
    VARIABLE        reduce using rule 5 (statement -> if_statement .)
    PRINT           reduce using rule 5 (statement -> if_statement .)
    IF              reduce using rule 5 (statement -> if_statement .)
    WHILE           reduce using rule 5 (statement -> if_statement .)
    FOR             reduce using rule 5 (statement -> if_statement .)
    $end            reduce using rule 5 (statement -> if_statement .)
    ELSE            reduce using rule 5 (statement -> if_statement .)


state 6

    (6) statement -> while_statement .

    NEWLINE         reduce using rule 6 (statement -> while_statement .)
    VARIABLE        reduce using rule 6 (statement -> while_statement .)
    PRINT           reduce using rule 6 (statement -> while_statement .)
    IF              reduce using rule 6 (statement -> while_statement .)
    WHILE           reduce using rule 6 (statement -> while_statement .)
    FOR             reduce using rule 6 (statement -> while_statement .)
    $end            reduce using rule 6 (statement -> while_statement .)
    ELSE            reduce using rule 6 (statement -> while_statement .)


state 7

    (7) statement -> for_statement .

    NEWLINE         reduce using rule 7 (statement -> for_statement .)
    VARIABLE        reduce using rule 7 (statement -> for_statement .)
    PRINT           reduce using rule 7 (statement -> for_statement .)
    IF              reduce using rule 7 (statement -> for_statement .)
    WHILE           reduce using rule 7 (statement -> for_statement .)
    FOR             reduce using rule 7 (statement -> for_statement .)
    $end            reduce using rule 7 (statement -> for_statement .)
    ELSE            reduce using rule 7 (statement -> for_statement .)


state 8

    (8) statement -> NEWLINE .

    NEWLINE         reduce using rule 8 (statement -> NEWLINE .)
    VARIABLE        reduce using rule 8 (statement -> NEWLINE .)
    PRINT           reduce using rule 8 (statement -> NEWLINE .)
    IF              reduce using rule 8 (statement -> NEWLINE .)
    WHILE           reduce using rule 8 (statement -> NEWLINE .)
    FOR             reduce using rule 8 (statement -> NEWLINE .)
    $end            reduce using rule 8 (statement -> NEWLINE .)
    ELSE            reduce using rule 8 (statement -> NEWLINE .)


state 9

    (12) assignment -> VARIABLE . EQUAL expression
    (13) assignment -> VARIABLE . EQUAL STRING
    (14) assignment -> VARIABLE . EQUAL NUMBER
    (15) assignment -> VARIABLE . EQUAL VARIABLE

    EQUAL           shift and go to state 15


state 10

    (11) print_statement -> PRINT . LEFT_PAREN expression RIGHT_PAREN

    LEFT_PAREN      shift and go to state 16


state 11

    (35) if_statement -> IF . expression COLON statements else_statement
    (16) expression -> . term
    (17) expression -> . expression PLUS term
    (18) expression -> . expression MINUS term
    (19) expression -> . expression STAR term
    (20) expression -> . expression SLASH term
    (21) expression -> . expression GREATER term
    (22) expression -> . expression LESS term
    (23) expression -> . expression EQUAL_EQUAL term
    (24) expression -> . expression NOT_EQUAL term
    (25) expression -> . expression GREATER_EQUAL term
    (26) expression -> . expression LESS_EQUAL term
    (27) term -> . NUMBER
    (28) term -> . STRING
    (29) term -> . VARIABLE
    (30) term -> . FLOAT
    (31) term -> . list
    (32) list -> . LEFT_BRACKET elements RIGHT_BRACKET

    NUMBER          shift and go to state 19
    STRING          shift and go to state 20
    VARIABLE        shift and go to state 21
    FLOAT           shift and go to state 22
    LEFT_BRACKET    shift and go to state 24

    expression                     shift and go to state 17
    term                           shift and go to state 18
    list                           shift and go to state 23

state 12

    (9) while_statement -> WHILE . expression COLON statements
    (16) expression -> . term
    (17) expression -> . expression PLUS term
    (18) expression -> . expression MINUS term
    (19) expression -> . expression STAR term
    (20) expression -> . expression SLASH term
    (21) expression -> . expression GREATER term
    (22) expression -> . expression LESS term
    (23) expression -> . expression EQUAL_EQUAL term
    (24) expression -> . expression NOT_EQUAL term
    (25) expression -> . expression GREATER_EQUAL term
    (26) expression -> . expression LESS_EQUAL term
    (27) term -> . NUMBER
    (28) term -> . STRING
    (29) term -> . VARIABLE
    (30) term -> . FLOAT
    (31) term -> . list
    (32) list -> . LEFT_BRACKET elements RIGHT_BRACKET

    NUMBER          shift and go to state 19
    STRING          shift and go to state 20
    VARIABLE        shift and go to state 21
    FLOAT           shift and go to state 22
    LEFT_BRACKET    shift and go to state 24

    expression                     shift and go to state 25
    term                           shift and go to state 18
    list                           shift and go to state 23

state 13

    (10) for_statement -> FOR . VARIABLE IN expression COLON statements

    VARIABLE        shift and go to state 26


state 14

    (2) statements -> statements statement .

    NEWLINE         reduce using rule 2 (statements -> statements statement .)
    VARIABLE        reduce using rule 2 (statements -> statements statement .)
    PRINT           reduce using rule 2 (statements -> statements statement .)
    IF              reduce using rule 2 (statements -> statements statement .)
    WHILE           reduce using rule 2 (statements -> statements statement .)
    FOR             reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)
    ELSE            reduce using rule 2 (statements -> statements statement .)


state 15

    (12) assignment -> VARIABLE EQUAL . expression
    (13) assignment -> VARIABLE EQUAL . STRING
    (14) assignment -> VARIABLE EQUAL . NUMBER
    (15) assignment -> VARIABLE EQUAL . VARIABLE
    (16) expression -> . term
    (17) expression -> . expression PLUS term
    (18) expression -> . expression MINUS term
    (19) expression -> . expression STAR term
    (20) expression -> . expression SLASH term
    (21) expression -> . expression GREATER term
    (22) expression -> . expression LESS term
    (23) expression -> . expression EQUAL_EQUAL term
    (24) expression -> . expression NOT_EQUAL term
    (25) expression -> . expression GREATER_EQUAL term
    (26) expression -> . expression LESS_EQUAL term
    (27) term -> . NUMBER
    (28) term -> . STRING
    (29) term -> . VARIABLE
    (30) term -> . FLOAT
    (31) term -> . list
    (32) list -> . LEFT_BRACKET elements RIGHT_BRACKET

    STRING          shift and go to state 29
    NUMBER          shift and go to state 30
    VARIABLE        shift and go to state 27
    FLOAT           shift and go to state 22
    LEFT_BRACKET    shift and go to state 24

    expression                     shift and go to state 28
    term                           shift and go to state 18
    list                           shift and go to state 23

state 16

    (11) print_statement -> PRINT LEFT_PAREN . expression RIGHT_PAREN
    (16) expression -> . term
    (17) expression -> . expression PLUS term
    (18) expression -> . expression MINUS term
    (19) expression -> . expression STAR term
    (20) expression -> . expression SLASH term
    (21) expression -> . expression GREATER term
    (22) expression -> . expression LESS term
    (23) expression -> . expression EQUAL_EQUAL term
    (24) expression -> . expression NOT_EQUAL term
    (25) expression -> . expression GREATER_EQUAL term
    (26) expression -> . expression LESS_EQUAL term
    (27) term -> . NUMBER
    (28) term -> . STRING
    (29) term -> . VARIABLE
    (30) term -> . FLOAT
    (31) term -> . list
    (32) list -> . LEFT_BRACKET elements RIGHT_BRACKET

    NUMBER          shift and go to state 19
    STRING          shift and go to state 20
    VARIABLE        shift and go to state 21
    FLOAT           shift and go to state 22
    LEFT_BRACKET    shift and go to state 24

    expression                     shift and go to state 31
    term                           shift and go to state 18
    list                           shift and go to state 23

state 17

    (35) if_statement -> IF expression . COLON statements else_statement
    (17) expression -> expression . PLUS term
    (18) expression -> expression . MINUS term
    (19) expression -> expression . STAR term
    (20) expression -> expression . SLASH term
    (21) expression -> expression . GREATER term
    (22) expression -> expression . LESS term
    (23) expression -> expression . EQUAL_EQUAL term
    (24) expression -> expression . NOT_EQUAL term
    (25) expression -> expression . GREATER_EQUAL term
    (26) expression -> expression . LESS_EQUAL term

    COLON           shift and go to state 32
    PLUS            shift and go to state 33
    MINUS           shift and go to state 34
    STAR            shift and go to state 35
    SLASH           shift and go to state 36
    GREATER         shift and go to state 37
    LESS            shift and go to state 38
    EQUAL_EQUAL     shift and go to state 39
    NOT_EQUAL       shift and go to state 40
    GREATER_EQUAL   shift and go to state 41
    LESS_EQUAL      shift and go to state 42


state 18

    (16) expression -> term .

    COLON           reduce using rule 16 (expression -> term .)
    PLUS            reduce using rule 16 (expression -> term .)
    MINUS           reduce using rule 16 (expression -> term .)
    STAR            reduce using rule 16 (expression -> term .)
    SLASH           reduce using rule 16 (expression -> term .)
    GREATER         reduce using rule 16 (expression -> term .)
    LESS            reduce using rule 16 (expression -> term .)
    EQUAL_EQUAL     reduce using rule 16 (expression -> term .)
    NOT_EQUAL       reduce using rule 16 (expression -> term .)
    GREATER_EQUAL   reduce using rule 16 (expression -> term .)
    LESS_EQUAL      reduce using rule 16 (expression -> term .)
    NEWLINE         reduce using rule 16 (expression -> term .)
    VARIABLE        reduce using rule 16 (expression -> term .)
    PRINT           reduce using rule 16 (expression -> term .)
    IF              reduce using rule 16 (expression -> term .)
    WHILE           reduce using rule 16 (expression -> term .)
    FOR             reduce using rule 16 (expression -> term .)
    $end            reduce using rule 16 (expression -> term .)
    ELSE            reduce using rule 16 (expression -> term .)
    RIGHT_PAREN     reduce using rule 16 (expression -> term .)
    RIGHT_BRACKET   reduce using rule 16 (expression -> term .)
    COMMA           reduce using rule 16 (expression -> term .)


state 19

    (27) term -> NUMBER .

    COLON           reduce using rule 27 (term -> NUMBER .)
    PLUS            reduce using rule 27 (term -> NUMBER .)
    MINUS           reduce using rule 27 (term -> NUMBER .)
    STAR            reduce using rule 27 (term -> NUMBER .)
    SLASH           reduce using rule 27 (term -> NUMBER .)
    GREATER         reduce using rule 27 (term -> NUMBER .)
    LESS            reduce using rule 27 (term -> NUMBER .)
    EQUAL_EQUAL     reduce using rule 27 (term -> NUMBER .)
    NOT_EQUAL       reduce using rule 27 (term -> NUMBER .)
    GREATER_EQUAL   reduce using rule 27 (term -> NUMBER .)
    LESS_EQUAL      reduce using rule 27 (term -> NUMBER .)
    RIGHT_PAREN     reduce using rule 27 (term -> NUMBER .)
    RIGHT_BRACKET   reduce using rule 27 (term -> NUMBER .)
    COMMA           reduce using rule 27 (term -> NUMBER .)
    NEWLINE         reduce using rule 27 (term -> NUMBER .)
    VARIABLE        reduce using rule 27 (term -> NUMBER .)
    PRINT           reduce using rule 27 (term -> NUMBER .)
    IF              reduce using rule 27 (term -> NUMBER .)
    WHILE           reduce using rule 27 (term -> NUMBER .)
    FOR             reduce using rule 27 (term -> NUMBER .)
    $end            reduce using rule 27 (term -> NUMBER .)
    ELSE            reduce using rule 27 (term -> NUMBER .)


state 20

    (28) term -> STRING .

    COLON           reduce using rule 28 (term -> STRING .)
    PLUS            reduce using rule 28 (term -> STRING .)
    MINUS           reduce using rule 28 (term -> STRING .)
    STAR            reduce using rule 28 (term -> STRING .)
    SLASH           reduce using rule 28 (term -> STRING .)
    GREATER         reduce using rule 28 (term -> STRING .)
    LESS            reduce using rule 28 (term -> STRING .)
    EQUAL_EQUAL     reduce using rule 28 (term -> STRING .)
    NOT_EQUAL       reduce using rule 28 (term -> STRING .)
    GREATER_EQUAL   reduce using rule 28 (term -> STRING .)
    LESS_EQUAL      reduce using rule 28 (term -> STRING .)
    RIGHT_PAREN     reduce using rule 28 (term -> STRING .)
    RIGHT_BRACKET   reduce using rule 28 (term -> STRING .)
    COMMA           reduce using rule 28 (term -> STRING .)
    NEWLINE         reduce using rule 28 (term -> STRING .)
    VARIABLE        reduce using rule 28 (term -> STRING .)
    PRINT           reduce using rule 28 (term -> STRING .)
    IF              reduce using rule 28 (term -> STRING .)
    WHILE           reduce using rule 28 (term -> STRING .)
    FOR             reduce using rule 28 (term -> STRING .)
    $end            reduce using rule 28 (term -> STRING .)
    ELSE            reduce using rule 28 (term -> STRING .)


state 21

    (29) term -> VARIABLE .

    COLON           reduce using rule 29 (term -> VARIABLE .)
    PLUS            reduce using rule 29 (term -> VARIABLE .)
    MINUS           reduce using rule 29 (term -> VARIABLE .)
    STAR            reduce using rule 29 (term -> VARIABLE .)
    SLASH           reduce using rule 29 (term -> VARIABLE .)
    GREATER         reduce using rule 29 (term -> VARIABLE .)
    LESS            reduce using rule 29 (term -> VARIABLE .)
    EQUAL_EQUAL     reduce using rule 29 (term -> VARIABLE .)
    NOT_EQUAL       reduce using rule 29 (term -> VARIABLE .)
    GREATER_EQUAL   reduce using rule 29 (term -> VARIABLE .)
    LESS_EQUAL      reduce using rule 29 (term -> VARIABLE .)
    RIGHT_PAREN     reduce using rule 29 (term -> VARIABLE .)
    RIGHT_BRACKET   reduce using rule 29 (term -> VARIABLE .)
    COMMA           reduce using rule 29 (term -> VARIABLE .)
    NEWLINE         reduce using rule 29 (term -> VARIABLE .)
    VARIABLE        reduce using rule 29 (term -> VARIABLE .)
    PRINT           reduce using rule 29 (term -> VARIABLE .)
    IF              reduce using rule 29 (term -> VARIABLE .)
    WHILE           reduce using rule 29 (term -> VARIABLE .)
    FOR             reduce using rule 29 (term -> VARIABLE .)
    $end            reduce using rule 29 (term -> VARIABLE .)
    ELSE            reduce using rule 29 (term -> VARIABLE .)


state 22

    (30) term -> FLOAT .

    COLON           reduce using rule 30 (term -> FLOAT .)
    PLUS            reduce using rule 30 (term -> FLOAT .)
    MINUS           reduce using rule 30 (term -> FLOAT .)
    STAR            reduce using rule 30 (term -> FLOAT .)
    SLASH           reduce using rule 30 (term -> FLOAT .)
    GREATER         reduce using rule 30 (term -> FLOAT .)
    LESS            reduce using rule 30 (term -> FLOAT .)
    EQUAL_EQUAL     reduce using rule 30 (term -> FLOAT .)
    NOT_EQUAL       reduce using rule 30 (term -> FLOAT .)
    GREATER_EQUAL   reduce using rule 30 (term -> FLOAT .)
    LESS_EQUAL      reduce using rule 30 (term -> FLOAT .)
    NEWLINE         reduce using rule 30 (term -> FLOAT .)
    VARIABLE        reduce using rule 30 (term -> FLOAT .)
    PRINT           reduce using rule 30 (term -> FLOAT .)
    IF              reduce using rule 30 (term -> FLOAT .)
    WHILE           reduce using rule 30 (term -> FLOAT .)
    FOR             reduce using rule 30 (term -> FLOAT .)
    $end            reduce using rule 30 (term -> FLOAT .)
    ELSE            reduce using rule 30 (term -> FLOAT .)
    RIGHT_PAREN     reduce using rule 30 (term -> FLOAT .)
    RIGHT_BRACKET   reduce using rule 30 (term -> FLOAT .)
    COMMA           reduce using rule 30 (term -> FLOAT .)


state 23

    (31) term -> list .

    COLON           reduce using rule 31 (term -> list .)
    PLUS            reduce using rule 31 (term -> list .)
    MINUS           reduce using rule 31 (term -> list .)
    STAR            reduce using rule 31 (term -> list .)
    SLASH           reduce using rule 31 (term -> list .)
    GREATER         reduce using rule 31 (term -> list .)
    LESS            reduce using rule 31 (term -> list .)
    EQUAL_EQUAL     reduce using rule 31 (term -> list .)
    NOT_EQUAL       reduce using rule 31 (term -> list .)
    GREATER_EQUAL   reduce using rule 31 (term -> list .)
    LESS_EQUAL      reduce using rule 31 (term -> list .)
    NEWLINE         reduce using rule 31 (term -> list .)
    VARIABLE        reduce using rule 31 (term -> list .)
    PRINT           reduce using rule 31 (term -> list .)
    IF              reduce using rule 31 (term -> list .)
    WHILE           reduce using rule 31 (term -> list .)
    FOR             reduce using rule 31 (term -> list .)
    $end            reduce using rule 31 (term -> list .)
    ELSE            reduce using rule 31 (term -> list .)
    RIGHT_PAREN     reduce using rule 31 (term -> list .)
    RIGHT_BRACKET   reduce using rule 31 (term -> list .)
    COMMA           reduce using rule 31 (term -> list .)


state 24

    (32) list -> LEFT_BRACKET . elements RIGHT_BRACKET
    (33) elements -> . expression
    (34) elements -> . elements COMMA expression
    (16) expression -> . term
    (17) expression -> . expression PLUS term
    (18) expression -> . expression MINUS term
    (19) expression -> . expression STAR term
    (20) expression -> . expression SLASH term
    (21) expression -> . expression GREATER term
    (22) expression -> . expression LESS term
    (23) expression -> . expression EQUAL_EQUAL term
    (24) expression -> . expression NOT_EQUAL term
    (25) expression -> . expression GREATER_EQUAL term
    (26) expression -> . expression LESS_EQUAL term
    (27) term -> . NUMBER
    (28) term -> . STRING
    (29) term -> . VARIABLE
    (30) term -> . FLOAT
    (31) term -> . list
    (32) list -> . LEFT_BRACKET elements RIGHT_BRACKET

    NUMBER          shift and go to state 19
    STRING          shift and go to state 20
    VARIABLE        shift and go to state 21
    FLOAT           shift and go to state 22
    LEFT_BRACKET    shift and go to state 24

    elements                       shift and go to state 43
    expression                     shift and go to state 44
    term                           shift and go to state 18
    list                           shift and go to state 23

state 25

    (9) while_statement -> WHILE expression . COLON statements
    (17) expression -> expression . PLUS term
    (18) expression -> expression . MINUS term
    (19) expression -> expression . STAR term
    (20) expression -> expression . SLASH term
    (21) expression -> expression . GREATER term
    (22) expression -> expression . LESS term
    (23) expression -> expression . EQUAL_EQUAL term
    (24) expression -> expression . NOT_EQUAL term
    (25) expression -> expression . GREATER_EQUAL term
    (26) expression -> expression . LESS_EQUAL term

    COLON           shift and go to state 45
    PLUS            shift and go to state 33
    MINUS           shift and go to state 34
    STAR            shift and go to state 35
    SLASH           shift and go to state 36
    GREATER         shift and go to state 37
    LESS            shift and go to state 38
    EQUAL_EQUAL     shift and go to state 39
    NOT_EQUAL       shift and go to state 40
    GREATER_EQUAL   shift and go to state 41
    LESS_EQUAL      shift and go to state 42


state 26

    (10) for_statement -> FOR VARIABLE . IN expression COLON statements

    IN              shift and go to state 46


state 27

    (15) assignment -> VARIABLE EQUAL VARIABLE .
    (29) term -> VARIABLE .
